# hse-python-backend

./: README.md  pyproject.toml
hw-1/: README.md  app.py
hw_2/: Dockerfile  README.md  docker-compose.yml  main.py
hw_2/controllers/: cart.py  item.py
hw_2/grafana/dashboards/: grafana.json
hw_2/grafana/provisioning/dashboards/: dashboard.yml  hw_2.json
hw_2/models/: models.py
hw_2/prometheus/: prometheus.yaml
hw_2/services/: cart.py  item.py
hw_2/test/: test.py
